# EKF-SLAM-Exercise

./: .gitignore  CMakeLists.txt  README.md
include/: ekf.hpp  robot.hpp
plotter/: plotter.py  plotter_anim.py
src/: ekf.cpp  main.cpp  robot.cpp
